--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -15,15 +15,19 @@
     <title>Faansy</title>
 </head>
 <body style="min-width: 500px;">
-    <header class="py-2 px-5 text-bg-light">
-        <div>
-            <span class="fs-6">We use cookies to give you the best experience and to ensure the safety of our users. The only non-essential cookies we use are for any personal referrals you make. We do not track you across other sites. You can see our <a href="" class="text-decoration-none text-faansy-red">Cookie Policy</a> here, and our <a href="" class="text-decoration-none text-faansy-red">Privacy Notice</a> here.</span>
-        </div>
-        <div class="d-flex justify-content-end column-gap-3 fw-semibold py-2">
-            <span><a href="" class="text-decoration-none text-faansy-red fs-6 text-uppercase">Customize Selection</a></span>
-            <span><a href="" class="text-decoration-none text-faansy-red fs-6 text-uppercase">Accept All</a></span>
+    <header>
+        <h1 class="d-none">Faansy</h1>
+        <div class="py-2 px-5 text-bg-light">
+            <div>
+                <span class="fs-6">We use cookies to give you the best experience and to ensure the safety of our users. The only non-essential cookies we use are for any personal referrals you make. We do not track you across other sites. You can see our <a href="" class="text-decoration-none text-faansy-red">Cookie Policy</a> here, and our <a href="" class="text-decoration-none text-faansy-red">Privacy Notice</a> here.</span>
+            </div>
+            <div class="d-flex justify-content-end column-gap-3 fw-semibold py-2">
+                <span><a href="" class="text-decoration-none text-faansy-red fs-6 text-uppercase">Customize Selection</a></span>
+                <span><a href="" class="text-decoration-none text-faansy-red fs-6 text-uppercase">Accept All</a></span>
+            </div>
         </div>
     </header>
+    
 
     <main id="main">
         <section class="row min-vh-100 border-bottom">
@@ -32,7 +36,6 @@
                     <h1 class="mb-3 px-5 d-flex align-items-center gap-1"><img src="../images/faansy_bg_index.png" alt="" width="345"></h1>
                     <p class="fs-1 fw-semibold lh-sm px-5"">Sign up to meet your favorite creators</p>
                 </div>
-                
             </div>
 
             <div class="col-md-6 col-sm-12 px-5 min-h-100 d-flex flex-column justify-content-center">
