--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -93,3 +93,12 @@ input[type=file]::file-selector-button:hover {
     border-radius: 0.375rem;
     opacity: var(--bs-btn-close-opacity);
 }
+
+/* a {
+    color: #ffeded;
+} */
+
+a:hover {
+    /* color: #f8cecec6; */
+    opacity: 0.75;
+}
