more client-side and bugs fixing

--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -126,6 +126,64 @@ a:hover {
 }
 
 
+/* Front-page Layout Animation */
+.texts-animated {
+  /* text-indent: 8px; */
+  /* position: relative; */
+  display: inline;
+}
+
+.texts-animated span {
+  color: black;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  -ms-animation: topToBottom 5s infinite;
+  -webkit-animation: topToBottom 5s infinite;
+  animation: topToBottom 5s infinite;
+  text-shadow: 0.2px 0.2px 2px white;
+}
+
+.texts-animated span:nth-child(2){
+  -ms-animation-delay: 1s;
+  -webkit-animation-delay: 1s;
+  animation-delay: 1s;
+}
+
+.texts-animated span:nth-child(3){
+  -ms-animation-delay: 2s;
+  -webkit-animation-delay: 2s;
+  animation-delay: 2s;
+}
+
+.texts-animated span:nth-child(4){
+  -ms-animation-delay: 3s;
+  -webkit-animation-delay: 3s;
+  animation-delay: 3s;
+}
+
+.texts-animated span:nth-child(5){
+  -ms-animation-delay: 4s;
+  -webkit-animation-delay: 4s;
+  animation-delay: 4s;
+}
+
+
+@-webkit-keyframes topToBottom {
+  0%, 20% {opacity: 1} /* visible for 1s */
+  20.01%, 100% {opacity: 0} /* hidden for 4s */
+}
+
+
+
+
+
+
+
+
+
+
+
 /* Card styles */
 :root {
     --purple: red;
