more integration of client-server with part of thorough funds handling implementations

--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -8,6 +8,11 @@ html {
 
 body {
     font-family: 'Comfortaa', sans-serif;
+    /* min-width: 600px; */
+}
+
+.mid-body {
+    min-width: 385px;
 }
 
 .form-control:focus {
